--- a/sapper-app/package.json
+++ b/sapper-app/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "full-icu": "^1.3.1",
     "marked": "^1.2.5",
     "moment": "^2.29.1",
