--- a/sapper-app/package.json
+++ b/sapper-app/package.json
@@ -12,16 +12,19 @@
   "dependencies": {
     "axios": "^0.21.0",
     "compression": "^1.7.1",
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "full-icu": "^1.3.1",
     "marked": "^1.2.5",
     "moment": "^2.29.1",
-    "polka": "next",
+    "polka": "^1.0.0-next.11",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
+    "@beyonk/sapper-rbac": "0.0.3",
     "@tsconfig/svelte": "^1.0.10",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
