--- a/sapper-app/package.json
+++ b/sapper-app/package.json
@@ -21,6 +21,7 @@
     "marked": "^1.2.5",
     "moment": "^2.29.1",
     "polka": "^1.0.0-next.11",
+    "quill": "^1.3.6",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "file-loader": "^6.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
+    "svelte-calendar": "^2.0.4",
     "svelte-check": "^1.0.46",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^4.3.0",
