--- a/sapper-app/package.json
+++ b/sapper-app/package.json
@@ -18,31 +18,49 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "date-fns": "^2.16.1",
-    "dotenv": "^8.2.0",
+    "filepond": "^4.25.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.9",
+    "filepond-plugin-image-preview": "^4.6.4",
     "full-icu": "^1.3.1",
     "marked": "^1.2.5",
-    "moment": "^2.29.1",
     "polka": "^1.0.0-next.11",
     "quill": "^1.3.6",
-    "sirv": "^1.0.0"
+    "sass": "^1.32.2",
+    "sirv": "^1.0.0",
+    "svelte-filepond": "0.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "@beyonk/sapper-rbac": "0.0.3",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-url": "^5.0.0",
+    "@rollup/plugin-typescript": "^8.1.0",
     "@tsconfig/svelte": "^1.0.10",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
     "file-loader": "^6.0.0",
+    "postcss": "^8.2.4",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.10",
     "svelte": "^3.17.3",
     "svelte-calendar": "^2.0.4",
     "svelte-check": "^1.0.46",
     "svelte-loader": "^2.9.0",
-    "svelte-preprocess": "^4.3.0",
+    "svelte-preprocess": "^4.6.1",
     "ts-loader": "^8.0.4",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.3",
-    "webpack": "^4.7.0",
-    "webpack-modules": "^1.0.0"
+    "typescript": "^4.0.3"
   }
 }
