--- a/api/api/images/models/images.settings.json
+++ b/api/api/images/models/images.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "images",
   "info": {
-    "name": "Images"
+    "name": "Images",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -14,12 +15,10 @@
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
-        "files",
-        "videos"
+        "images"
       ],
       "plugin": "upload",
-      "required": false
+      "required": true
     }
   }
 }
