--- a/api/api/guest/models/guest.settings.json
+++ b/api/api/guest/models/guest.settings.json
@@ -17,14 +17,9 @@
     "birthday": {
       "type": "date"
     },
-    "picture": {
-      "model": "file",
-      "via": "related",
-      "allowedTypes": [
-        "images"
-      ],
-      "plugin": "upload",
-      "required": false
+    "image": {
+      "unique": true,
+      "model": "images"
     }
   }
 }
