--- a/sapper-app/package.json
+++ b/sapper-app/package.json
@@ -11,6 +11,7 @@
     "server": "pm2 start __sapper__/build --name sapper"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
     "axios": "^0.21.0",
     "blueimp-canvas-to-blob": "^3.28.0",
     "blueimp-load-image": "^5.14.0",
@@ -24,6 +25,8 @@
     "filepond-plugin-image-exif-orientation": "^1.0.9",
     "filepond-plugin-image-preview": "^4.6.4",
     "full-icu": "^1.3.1",
+    "google-auth-library": "^7.0.4",
+    "googleapis": "^71.0.0",
     "marked": "^1.2.5",
     "polka": "^1.0.0-next.11",
     "quill": "^1.3.6",
@@ -38,15 +41,16 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@beyonk/sapper-rbac": "0.0.3",
+    "@beyonk/svelte-social-auth": "^2.1.1",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
-    "@rollup/plugin-url": "^5.0.0",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@rollup/plugin-url": "^5.0.0",
     "@tsconfig/svelte": "^1.0.10",
     "@types/compression": "^1.7.0",
-    "@types/node": "^14.11.1",
+    "@types/node": "^14.14.41",
     "@types/polka": "^0.5.1",
     "file-loader": "^6.0.0",
     "postcss": "^8.2.4",
