--- a/api/api/record/models/record.settings.json
+++ b/api/api/record/models/record.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "history_records",
+  "collectionName": "records",
   "info": {
-    "name": "historyRecord",
+    "name": "record",
     "description": ""
   },
   "options": {
@@ -14,13 +14,14 @@
     "title": {
       "type": "string"
     },
-    "artist": {
-      "type": "string"
-    },
     "youtubeId": {
-      "type": "string"
+      "type": "string",
+      "unique": true
     },
     "thumbnail": {
+      "type": "string"
+    },
+    "artist": {
       "type": "string"
     }
   }
